Fix some sizing issues. Disable debug panel in minimal mode on small screens (iPhone)

--- a/src/ui/panels/debugsection.css
+++ b/src/ui/panels/debugsection.css
@@ -511,14 +511,8 @@ body.dark-mode .icon-text {
   color: var(--text-color);
 }
 
-.dbg-panel {
-  width: 100%;
-  height: 88.5vh;
-}
-
 .debug-section {
   width: 100%;
-  height: 100%;
   padding-top: 0px;
 }
 
@@ -574,4 +568,12 @@ body.dark-mode .icon-text {
 
 .dbg-expect-button:hover {
   background-color: gray;
+}
+
+.cm-tooltip-autocomplete {
+  border: 1px solid var(--background-color) !important;
+}
+
+.cm-tooltip-autocomplete [aria-selected="true"] {
+  background-color: var(--highlight) !important;
 }
